# acm-cli-composer

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  acml.py  check_midi.py  check_midi2.py  check_midi3.py  cli.py  composer.py  debug_acml.py  gen_awalker.py  gen_beginner.py  gen_beginner_plus.py  gen_easy.py  gen_easy2.py  gen_fusion.py  gen_fusion2.py  gen_hihi.py  gen_keic_aw.py  gen_keic_easy.py  gen_keic_game.py  gen_keic_med.py  gen_menu.py  gen_tutorial.py  gen_tutorial_v2.py  gen_unnamed.py  pyproject.toml  track.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: acml-format.md  cli-reference.md
samples/: acm.acml  awalker.acml  beginner.acml  beginner_plus.acml  business_bg.acml  easy.acml  easy2.acml  fusion.acml  fusion2.acml  hihi.acml  hihi_another.acml  keic.acml  keic_easy.acml  keic_game.acml  keic_med.acml  keic_theme.acml  keic_theme_aw.acml  menu.acml  midnight_echo.acml  tutorial.acml  tutorial_v2.acml  unnamed.acml
tests/: test_cli.py  test_composer.py  test_drums.py  test_track.py
